# referee-stats-fogis

./: .codecov.yml  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PYTHON_SUPPORT.md  README.md  changes.diff  changes.patch  codecov.yml  database_design.md  fix_pipe_operators.py  issue-description.md  pr-description-11.md  pr-description.md  pr_comment.md  pre-commit-hooks-issue.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_checks.sh  setup.py
.github/workflows/: branch-protection.yml  ci.yml
docs/: README.md  data_import.md  data_import_troubleshooting.md  pre_commit_hooks.md  statistics.md
examples/: README.md  import_example.py  match.json  match_event.json  match_participant.json  match_result.json  players.csv
migrations/: env.py
migrations/versions/: 5ee7a62d717d_initial_migration.py
referee_stats_fogis/: __init__.py  __main__.py  cli.py  config.py
referee_stats_fogis/core/: __init__.py  importer.py  stats.py
referee_stats_fogis/data/: README.md  __init__.py  base.py  database.py  db_manager.py  init_data.py  models.py
referee_stats_fogis/utils/: __init__.py  file_utils.py
referee_stats_fogis/web/: __init__.py
scripts/: verify_hooks.py
tests/: __init__.py
tests/integration/: __init__.py
tests/performance/: test_stats_performance.py
tests/unit/: __init__.py  test_db_models.py  test_file_utils.py  test_importer.py  test_models.py  test_stats.py  test_verify_hooks.py
