[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "referee_stats_fogis"
version = "0.1.0"
description = "A tool to track and analyze referee statistics from FOGIS"
readme = "README.md"
authors = [
    {name = "Bartek Svaberg", email = "example@example.com"}
]
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.40",
    "alembic>=1.15.2",
    "psycopg2-binary>=2.9.10",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["referee_stats_fogis"]
exclude = ["migrations*", "tests*"]

[tool.setuptools.package-data]
referee_stats_fogis = ["**/*.py"]

[tool.setuptools.exclude-package-data]
referee_stats_fogis = ["migrations/**"]

[project.optional-dependencies]
dev = [
    "black>=24.3.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "flake8-docstrings>=1.7.0",
    "flake8-quotes>=3.3.2",
    "flake8-bugbear>=24.2.6",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.5.0",
    "build>=1.0.3",
    "twine>=4.0.2",
    "docformatter>=1.7.5",
    "pyupgrade>=3.15.0",
    "autoflake>=2.2.1",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
